2009-01-08 - Sean Huber (shuber@huberry.com)
  * Clean up CHANGELOG
  * Convert to soft tabs
  * Remove .gitignore
  * Gemify
  * Remove logic that rejected TextMate paths to fix the old builder.rb conflict

2008-06-23 - Sean Huber (shuber@huberry.com)
  * Renamed authentication_message/redirect_path to unauthenticated_message/redirect_path
  * logged_in? now accepts a block that will yield when true

2008-06-09 - Sean Huber (shuber@huberry.com)
  * Reloading a model sets password_changed? to false
  * Removed accidently left over hard coded logic from password_required?
  * unauthenticated method stores request_uri in session[:return_to]

2008-06-05 - Sean Huber (shuber@huberry.com)
  * Updated README
  * current_user returns nil unless logged_in?
  * Added extra uses_authentication field options
  * Renamed @searched_for_current_user to @queried_for_current_user
  * Renamed login_required to authentication_required
  * find_current_user always returns current_user
  * Renamed test files
  * Added find_current_user functional tests
  * Changed email addresses in CHANGELOG

2008-06-04 - Sean Huber (shuber@huberry.com)
  * Initial import from access_control_list repository
  * Login field is configurable
  * Controller and model must call uses_authentication
  * Fixed functional test exception
  * Added functional tests
  * Updated README
  * Controller no longer has to call uses_authentication - logic included automatically