@@ -5,10 +5,13 @@ module Huberry
         base.class_eval do
           include InstanceMethods
           
-          cattr_accessor :authentication_model, :unauthenticated_message, :unauthenticated_redirect_path
-          self.authentication_model = 'User'
-          self.unauthenticated_message = 'Login to continue'
-          self.unauthenticated_redirect_path = '/'
+          cattr_accessor :authentication_options
+          self.authentication_options = {
+            :flash_type => :error, 
+            :model => 'User', 
+            :message => 'Login to continue', 
+            :redirect_to => '/' 
+          }
           
           attr_accessor :current_user
           helper_method :current_user, :logged_in?
@@ -25,35 +28,33 @@ module Huberry
           def find_current_user(force_query = false)
             if @queried_for_current_user.nil? || force_query
               @queried_for_current_user = true
-              self.current_user = self.class.authentication_model.to_s.constantize.find(session[:user_id]) rescue nil
+              self.current_user = self.class.authentication_options[:model].to_s.constantize.find(session[authentication_session_field]) rescue nil
             end
             self.current_user
           end
           
           def logged_in?
-            find_current_user if self.current_user.nil?
-            if self.current_user.nil?
-              block_given? ? nil : false
-            else
-              block_given? ? yield : true
-            end
+            !find_current_user.nil?
           end
           
           def login(user)
             self.current_user = user
-            session[:user_id] = user.id
+            session[authentication_session_field] = user.id
           end
           
           def logout
             self.current_user = nil
-            session[:user_id] = nil
+            session[authentication_session_field] = nil
+          end
+          
+          def authentication_session_field
+            self.class.authentication_options[:session_field] || "#{self.class.authentication_options[:model].to_s.underscore}_id".to_sym
           end
           
           def unauthenticated
             session[:return_to] = request.request_uri
-            flash[:error] = self.class.unauthenticated_message.to_s
-            redirect_to respond_to?(self.class.unauthenticated_redirect_path) ? send(self.class.unauthenticated_redirect_path) : self.class.unauthenticated_redirect_path.to_s
-            false
+            flash[self.class.authentication_options[:flash_type]] = self.class.authentication_options[:message] if self.class.authentication_options[:message]
+            redirect_to respond_to?(self.class.authentication_options[:redirect_to]) ? send(self.class.authentication_options[:redirect_to]) : self.class.authentication_options[:redirect_to].to_s
           end
       end
     end
