@@ -31,7 +31,10 @@ class ControllerTest < Test::Unit::TestCase
     @request    = ActionController::TestRequest.new
     @response   = ActionController::TestResponse.new
 
+    @controller.instance_variable_set('@_request', @request)
     @controller.instance_variable_set('@_session', @request.session)
+    
+    @controller.class.authentication_options.merge!(:session_field => nil, :message => 'Login to continue')
   end
   
   def teardown
@@ -48,13 +51,6 @@ class ControllerTest < Test::Unit::TestCase
     assert !@controller.send(:logged_in?)
   end
   
-  def test_logged_in_yields_block_on_true
-    assert_equal nil, @controller.send(:logged_in?) { 'some_value' }
-    
-    @controller.send :login, @user
-    assert_equal 'some_value', @controller.send(:logged_in?) { 'some_value' }
-  end
-  
   def test_current_user
     assert_nil @controller.send(:current_user)
     
@@ -68,9 +64,6 @@ class ControllerTest < Test::Unit::TestCase
   def test_should_require_login
     get :login_required
     assert_response :redirect
-    assert flash.has_key?(:error)
-    assert_equal @controller.unauthenticated_message, flash[:error]
-    assert_redirected_to '/'
   end
   
   def test_should_not_require_login
@@ -109,6 +102,28 @@ class ControllerTest < Test::Unit::TestCase
   def test_unauthenticated_sets_return_to_session_variable
     get :login_required
     assert_equal @controller.session[:return_to], '/login_required'
+  end
+  
+  def test_should_set_a_flash_message_when_unauthenticated
+    get :login_required
+    assert_equal @controller.class.authentication_options[:message], flash[@controller.class.authentication_options[:flash_type]]
+  end
+  
+  def test_not_should_set_a_flash_message_when_unauthenticated_if_message_is_false
+    @controller.class.authentication_options[:message] = false
+    get :login_required
+    assert_nil flash[@controller.class.authentication_options[:flash_type]]
+  end
+  
+  def test_should_redirect_when_unauthenticated
+    get :login_required
+    assert_redirected_to @controller.class.authentication_options[:redirect_to]
+  end
+  
+  def test_should_use_custom_session_field
+    @controller.class.authentication_options[:session_field] = :test
+    @request.session[:test] = @user.id
+    assert @controller.send(:logged_in?)
   end
   
 end
